--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -5,12 +5,13 @@
     font-family: 'Pixelify Sans', sans-serif;
     font-weight: 600px;
     color: white;
-    background-color: black;/* Replace 'path_to_your_image.jpg' with your image path */
+    background-color: black;
     background-size: cover; /* Adjust as needed */
     background-repeat: no-repeat; /* Adjust as needed */
 }
 .navbar-brand, #navbarWrapper{
     color: white;
+    background-color: transparent;
 
 }
 
@@ -30,7 +31,6 @@
 
 #menu{
     background-color: rgba(92, 92, 92, 0);
-    border-radius: 2;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -96,8 +96,7 @@
 #pauseMenuCloseButton {
     width: 40px;
     height: 40px;
-    border-radius: 40px;
-    border: 2px solid black;
+    border-color:transparent;
     font-size: x-large;
     overflow: hidden;
 }
@@ -123,7 +122,7 @@
 
 #rulesAndCommandsDiv.modal, #rulesAndCommandsDiv.modal-fade, #rulesAndCommandsDiv.modal-dialog, 
 #pauseModal.modal, #pauseModal.modal-fade, #pauseModal.modal-dialog{
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 255, 255, 0.296);
 }
 
 #commandsDiv{
@@ -141,14 +140,7 @@
 ::backdrop{
     opacity: 0.75;
 }
-.mask-custom {
-    background-color: green;
-    border-radius: 2em;
-    backdrop-filter: blur(25px);
-    border: 2px solid rgba(0, 0, 0, 0.175);
-    background-clip: padding-box;
-    box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
-}
+
 .game-page-container {
     /* Other styles */
   
@@ -157,7 +149,7 @@
     background-size: cover; /* Adjust as needed */
     background-repeat: no-repeat; /* Adjust as needed */
   }
- .table table-hober{
+ .table table-hover{
     background-color:green;
  }  
  
@@ -200,11 +192,11 @@
 }
 
 #gameOverScreen{
-    z-index: 2;
+    z-index: -1;
     background-color: black;
     justify-content: center;
     opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -240,3 +232,69 @@
 #gameOverRestart, #gameOverExit{
     justify-self: center;
 }
+
+.rulesAndCommandsIcons{
+    background-color: grey;
+    border-radius: 3px;
+    left: 25%;
+    position: relative;
+}
+
+.rulesAndCommandsText{
+    position: relative;
+    right: 12%;
+    width: min-content;
+    background-color: transparent;
+    margin: 10px;
+    margin-top: 0px;
+}
+
+#balanceDisplay{
+    position: absolute;
+    right: 10px;
+    width: fit-content;
+    font-size: xx-large;
+}
+
+.border-flash-green {
+    border: 5px solid #00FF00; 
+    padding: 10px;
+    border-radius: 10px; 
+}
+
+.profile-container {
+    background-color: rgba(0, 0, 0, 0.8); /* fond semi-transparent noir */
+    border: 3px solid green; /* bordure verte */
+    padding: 20px;
+    border-radius: 15px;
+    margin-top: 20px;
+  }
+  
+  .profile-container h1, .profile-container h2, .profile-container h3 {
+    color: white;
+  }
+  
+  .profile-title {
+    color: white;
+    text-align: center;
+    margin-bottom: 10px;
+    position: relative;
+  }
+  
+  .profile-title::after {
+    content: '';
+    display: block;
+    height: 3px;
+    background-color: green;
+    width: 50%;
+    margin: 0 auto; /* Centre la barre */
+    margin-top: 5px;
+  }
+  
+  .profile-info {
+    color: white;
+    text-align: center;
+  }
+  
+  
+  
